<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/modifyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"

                android:layout_weight="0.9"
                android:text="Modify Password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/expandPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_expand_more_black_24dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/modifyPasswordContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="341dp"
                android:layout_height="38dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backGroundRed"
                android:ems="10"
                android:hint="Former Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="341dp"
                android:layout_height="38dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backGroundRed"
                android:ems="10"
                android:hint="New Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/newPasswordConfirm"
                android:layout_width="341dp"
                android:layout_height="38dp"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/backGroundRed"
                android:ems="10"
                android:hint="Confirm your new password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/validatePasswordButton"
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="5dp"
                android:background="@drawable/button_background"
                android:text="save"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/otherSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"

                android:layout_weight="0.9"
                android:text="Other Settings"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/expandOtherSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_expand_more_black_24dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/otherSettingsContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Not available yet"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/deleteAccountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"

                android:layout_marginVertical="20dp"
                android:layout_weight="0.9"
                android:text="Delete Account"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:text="Delete" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/clearCacheLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"

                android:layout_marginVertical="20dp"
                android:layout_weight="0.9"
                android:text="Clear Cache"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clearCacheButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:text="Clear" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>