...
            android:title="@string/popular_kandlers_item" />

        <item android:title="@string/communication_item">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/settings"
                        android:icon="@drawable/ic_settings_24dp"
                        android:title="@string/settings_item" />
                    <item
                        android:id="@+id/about"
                        android:icon="@drawable/ic_about_24dp"
                        android:title="@string/about_us_item" />
...
